# stPatternSearch

./: .gitignore  CMakeLists.txt  CONVENTIONS.md  README.md  ROADMAP.md  STATUS.md  build.sh  greedy_set_cover.md  install.sh
.claude/: settings.local.json
.claude/memory/: MEMORY.md  feedback_gpu_required.md  feedback_smart_pointers.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
cmake/: stPSConfig.cmake.in
docs/notes/: ups-output-formats.md
include/stPS/: partition.hpp  solver.hpp  stPS.h  types.hpp  ups_pattern_stats.hpp  usc_patch_selector.hpp
scripts/: setup-env.sh
src/: CMakeLists.txt  main.cpp
src/core/: bitset.cpp  bitset.hpp  brute_force.cpp  brute_force.hpp  csr.cpp  csr.hpp  device_buffer.cu  device_buffer.cuh  device_buffer.hpp  gpu_profiler.cu  gpu_profiler.hpp  host_profiler.cpp  host_profiler.hpp  inverted_index.cpp  inverted_index.hpp  patch_set.cpp  patch_set.hpp  types.hpp  usc_patch_selector_impl.cu  usc_patch_selector_impl.hpp  usc_solver.cu  usc_solver.hpp
src/data/: partition.cpp  synthetic.cpp  synthetic.hpp
src/io/: patch_reader.hpp  stps_binary.cpp
src/ups/: hash_stats.cpp  hash_stats.hpp  main.cpp  stats_file.cpp  ups_pattern_stats.cpp  ups_pattern_stats.cu
src/usc/: brute_force.cpp  main.cpp  usc_patch_selector_impl.cu  usc_patch_selector_impl.hpp
tests/: CMakeLists.txt  test_bitset.cpp  test_brute_force.cpp  test_csr.cpp  test_hash_stats.cpp  test_inverted_index.cpp  test_main.cpp  test_nccl_env.hpp  test_patch_io.cpp  test_patch_set.cpp  test_pattern_stats.cpp  test_solver_equivalence.cpp  test_synthetic.cpp
tests/helpers/: local_setup.cpp  local_setup.hpp
